--- a/src/Component/ServiceProductCard/index.scss
+++ b/src/Component/ServiceProductCard/index.scss
@@ -28,6 +28,6 @@
     color: #ff0000;
     font-style: italic;
   }
-  .isFree{
-    color: var(--green) !important
+  .isAvailable{
+    color: var(--green)
   }
